--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proficient - The Personal Assistant</title>
+    <title>Persistant - The Personal Assistant</title>
   </head>
   <body id="body">
     <div id="root"></div>
