--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Persistant - The Personal Assistant</title>
+    <link rel="icon" href="./Favicon.png">
   </head>
   <body id="body">
     <div id="root"></div>
